main.css
* {
    box-sizing: border-box;
}
body {
    background: #23395b;
    font-family: 'HKGroteskRegular'; 
    font-weight: normal; 
    font-style: normal; 
    color: black;
    text-align: center;
    margin: 0 30px;
}
/*** header section ***/

header {
    font-family:'GlacialIndifferenceRegular'; 
    font-weight: normal; 
    font-style: normal; 
    font-size: 24px;
    color: black;
}

body {
    text-align: center;
    color: black;
  }
  .nav-bar {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 55px;
    width: auto;
    font-family: 'GlacialIndifferenceRegular';
    font-size: 18px;
    background-color:#23395b;
    margin-bottom: 15px;
    color: black;
  }

  ul#menu > li{
    float:right;
    list-style-type:none;
    position:relative;
    font-family: 'HKGroteskRegular';
    margin-top: 20px;
  }

  label {
    position: relative;
    display: block;
    padding: 0 35px;
    margin-bottom: 5px;
    margin-top: -7px;
    line-height: 30px;
    cursor: pointer;
    background-color: #23395b;
    color: #f1f2eb;
  }  

  input {
    display: none;
  }

  input:checked ~ ul.submenu {
    max-height: 400px;
  }

  ul.submenu{
    max-height: 0;
    padding: 0;
    overflow: hidden;
    list-style-type: none;
    background-color: #f06449;
    transition: max-height 0.5s ease-out;
    position: absolute;
    min-width: 100%;
  }
  
  ul.submenu li a{
    display: block;
    padding: 10px;
    text-decoration: none;
  }
  
  ul.submenu li a:hover{
    background:#93b7be;
  }

  .name {
    float: left;
    margin: 15px 0px 5px 10px;
    padding: 2px;
    color: #f1f2eb;
  }


h1 {
    font-family: 'GlacialIndifferenceRegular'; 
    font-weight: normal; 
    font-style: normal; 
    font-size: 40px;
}


/*** section styling ***/ 

section, header {
    min-height: 150px;
    padding: 80px;
    background-color: #f1f2eb;

}

section{
    padding-left: 30px;
    padding-right: 30px;
    margin-left: 0px;
    margin-right: 0px;
}

h2 {
    font-family: 'GlacialIndifferenceRegular'; 
    font-weight: normal; 
    font-style: normal; 
    font-size: 34px;
}

section p {
    font-size: 16px;
    line-height: 22px;
    text-align: left;
}

/*** about section ***/

.about{
background: #93b7be;
border-style:double;
border-left: 10px;
border-right: 10px;
border-color: #f06449;
/* background-image: 
    linear-gradient(
    rgba(0, 0, 0, 0.6),
    rgba(0, 0, 0, 0.6)
    ),
    url(images/background.JPG);
    } */
}

/*** projects section ***/

.projects h3 {
    font-size: 18px;
}
.projects a {
    text-decoration: none;
    display: block;
    color: black;
    margin: 10px 0;
}

.projects img {
    width: 70%;
}

.projects p{
    display: inline-block;
}

/*** contact section ***/

ul {
      list-style: none;
      text-align: center;
      margin: 0;
      padding: 0;
}

ul li {
    display: inline-block;
    margin: 0;
}

img {
    width: 50%;
}

.contact{
    background-color: #93b7be;
    border-style: double;
    border-left: 10px;
    border-right: 10px;
    border-color: #f06449;
    padding-top: 10px;
    padding-bottom: 40px;
}

/*** footer section ***/

footer {
    height: 12px;
    color: grey;
}

/*** responsive layouts ***/ 

@media screen and (max-width: 768px){
    body {
        margin: 0 40px;

    }

    .heroimage{
        width: 100%;
    }

    header h1 {
        font-size: 40px;
    }

    header p {
        font-size: 18px;
    }

    h2 {
        font-size: 34px;
    }

    section p {
        font-size: 18px;
        line-height: 26px;
    }

    .projects h3 {
        font-size:  26px;
    }

    .projects a {
        font-size: 18px;
    }

    .projects img {
        margin: 40px;
    }

    .contact ul li {
        margin: 0 20px;
    }
}
    
@media screen and (min-width: 768px){
    body {
        margin: 0 40px;

    }

    .heroimage{
        width: 100%;
    }

    header h1 {
        font-size: 40px;
    }

    header p {
        font-size: 28px;
    }

    h2 {
        font-size: 34px;
    }

    section p {
        font-size: 20px;
        line-height: 30px;
    }

    .projects h3 {
        font-size:  26px;
    }

    .projects a {
        font-size: 18px;
    }

    .projects img {
        margin: 20px;
    }

    .contact ul li {
        margin: 0 20px;
    }
}
@media screen and (min-width: 1281px) {
    header h1 {
        font-size: 48px;
    }

    .heroimage{
        width: 100%;
    }

    header p {
        font-size: 32px;
    }

    body {
        margin: 0 100px;
    }

    p {
        font-size: 24px;
    }

    h2 {
        font-size: 34px;
    }

    .contact ul li {
        margin: 0 50px;
    }

    .contact img {
        width: 40%;
    }
}

